--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
-    "autoprefixer": "^10.4.14",
     "prettier": "^2.8.8",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.0",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^8.8.0"
+    "tailwindcss": "^3.3.0"
   }
 }
