--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,61 @@
+# Dependencies
 node_modules/
+
+# Build output
 _site/
-.DS_Store
-*.log
-npm-debug.log*
+dist/
+build/
+
+# Environment variables
 .env
 .env.local
+.env.production
+.env.development
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Cache directories
 .cache/
-dist/
+.nyc_output/
+coverage/
+.nuxt/
+.next/
+.vercel/
+
+# Temporary files
+tmp/
+temp/
+
+# Local Eleventy files (if any)
+.eleventy.js.map
+
+# Editor backup files
+*~
+*.bak
+*.tmp
+
+# Sensitive files
+config/secrets.*
+secrets.json
+private.pem
+public.pem
