--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "prettier": "^2.8.8",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.3.0"
+  },
+  "dependencies": {
+    "ajv": "^8.17.1",
+    "js-yaml": "^4.1.1"
   }
 }
