--- a/data/events.yaml
+++ b/data/events.yaml
@@ -9,76 +9,76 @@ hero:
 
 # Upcoming Events Section
 upcoming_events:
-  - id: 1
-    title: "AI Safety Governance Panel Discussion"
-    date: "February 15, 2026 | 18:00 CET"
-    emoji: "📅"
-    status: "Upcoming"
-    description: "Join us for a panel discussion with leading experts on AI governance frameworks, regulatory approaches, and the role of international cooperation in AI safety policy."
-    format_info:
-      - label: "Format"
-        value: "Online Panel + Q&A"
-      - label: "Duration"
-        value: "2 hours"
-      - label: "Speakers"
-        value: "Industry leaders & policymakers"
-    register_text: "Register for Details"
-    register_link: "{{ site.forms.mailingList }}"
-    register_target: "_blank"
+  # - id: 1
+  #   title: "AI Safety Governance Panel Discussion"
+  #   date: "February 15, 2026 | 18:00 CET"
+  #   emoji: "📅"
+  #   status: "Upcoming"
+  #   description: "Join us for a panel discussion with leading experts on AI governance frameworks, regulatory approaches, and the role of international cooperation in AI safety policy."
+  #   format_info:
+  #     - label: "Format"
+  #       value: "Online Panel + Q&A"
+  #     - label: "Duration"
+  #       value: "2 hours"
+  #     - label: "Speakers"
+  #       value: "Industry leaders & policymakers"
+  #   register_text: "Register for Details"
+  #   register_link: "{{ site.forms.mailingList }}"
+  #   register_target: "_blank"
   
-  - id: 2
-    title: "8-Week Introductory Courses Begin"
-    date: "March 2026"
-    emoji: "📅"
-    status: "Upcoming"
-    description: "Our flagship educational program launches with two tracks: AI Safety Governance and AI Safety Alignment. Learn from experienced practitioners and join a community of like-minded individuals."
-    format_info:
-      - label: "Duration"
-        value: "8 weeks"
-      - label: "Format"
-        value: "Online + Discussion Groups"
-      - label: "Commitment"
-        value: "3-4 hours/week"
-    register_text: "Apply Now"
-    register_link: "{{ site.forms.courseApplication }}"
-    register_target: "_blank"
+  # - id: 2
+  #   title: "8-Week Introductory Courses Begin"
+  #   date: "March 2026"
+  #   emoji: "📅"
+  #   status: "Upcoming"
+  #   description: "Our flagship educational program launches with two tracks: AI Safety Governance and AI Safety Alignment. Learn from experienced practitioners and join a community of like-minded individuals."
+  #   format_info:
+  #     - label: "Duration"
+  #       value: "8 weeks"
+  #     - label: "Format"
+  #       value: "Online + Discussion Groups"
+  #     - label: "Commitment"
+  #       value: "3-4 hours/week"
+  #   register_text: "Apply Now"
+  #   register_link: "{{ site.forms.courseApplication }}"
+  #   register_target: "_blank"
   
   - id: 3
-    title: "Monthly Researcher Meetup"
-    date: "Every 2nd Thursday at 19:00 CET"
+    title: "Wednesady Researcher Meetup"
+    date: "Every 2nd Wednesady at 18:00 CET"
     emoji: "📅"
     status: "Recurring"
-    description: "Informal gathering for AI safety researchers, students, and enthusiasts to discuss recent papers, share ideas, and collaborate on projects. A great place to network with the community!"
+    description: "Informal gathering for AI safety researchers, students, and enthusiasts to discuss and collaborate on projects. A great place to network with the community!"
     format_info:
       - label: "Format"
         value: "Virtual Meetup"
       - label: "Size"
-        value: "20-40 participants"
+        value: "3-10 participants"
       - label: "Level"
         value: "All experience welcome"
     register_text: "Get Meeting Details"
-    register_link: "{{ site.forms.mailingList }}"
+    register_link: "{{ site.social.discord }}"
     register_target: "_blank"
 
 # Recent Highlights Section
 recent_highlights:
-  - id: 1
-    title: "AI Safety Roundtable Discussion"
-    date: "January 20, 2026"
-    emoji: "🏆"
-    description: "Industry experts discussed current challenges in AI alignment research and governance. Topics included transformer interpretability and societal impacts of large language models."
-    participants: "40+ participants"
+  # - id: 1
+  #   title: "AI Safety Roundtable Discussion"
+  #   date: "January 20, 2026"
+  #   emoji: "🏆"
+  #   description: "Industry experts discussed current challenges in AI alignment research and governance. Topics included transformer interpretability and societal impacts of large language models."
+  #   participants: "40+ participants"
   
-  - id: 2
-    title: "Introduction to AI Safety Workshop"
-    date: "January 15, 2026"
-    emoji: "🎓"
-    description: "Interactive workshop covering fundamentals of AI safety, technical approaches, policy considerations, and career paths. Hands-on activities and expert insights made it engaging for all levels."
-    participants: "50+ participants"
+  # - id: 2
+  #   title: "Introduction to AI Safety Workshop"
+  #   date: "January 15, 2026"
+  #   emoji: "🎓"
+  #   description: "Interactive workshop covering fundamentals of AI safety, technical approaches, policy considerations, and career paths. Hands-on activities and expert insights made it engaging for all levels."
+  #   participants: "50+ participants"
 
 # CTA Section
 cta:
   title: "Ready to Join Our Community?"
   description: "Whether you're a researcher, student, professional, or simply curious about AI safety, there's a place for you in our community."
-  button_text: "Join Today"
+  button_text: "Join Our Discord"
   # Link handled directly in template via `site.social.discord`
