--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -5,103 +5,27 @@
 # Hero Section
 hero:
   title: "Get in Touch"
-  subtitle: "Have questions or want to get involved? Reach out to us through any of these channels."
+  subtitle: "Have questions or want to get involved? Reach out to us through one of these channels."
 
-# Contact Methods Section
-contact_methods:
-  - id: 1
-    title: "General Inquiries"
+# Unified contact channels: Email, LinkedIn, Discord
+channels:
+  - id: email
+    title: "Email"
     emoji: "📧"
-    description: "For general questions about our organization, events, or membership."
-    contact_info: "aisafetyitalia@gmail.com"
-    cta_text: "Send Email"
-    cta_link: "mailto:aisafetyitalia@gmail.com"
-  
-  - id: 2
-    title: "Course Applications"
-    emoji: "🎓"
-    description: "For questions about our educational programs and application process."
-    contact_info: "courses@aisafetyitalia.org"
-    cta_text: "Send Email"
-    cta_link: "mailto:courses@aisafetyitalia.org"
-  
-  - id: 3
-    title: "Partnerships"
-    emoji: "🤝"
-    description: "For partnership opportunities, collaborations, or sponsorship inquiries."
-    contact_info: "partnerships@aisafetyitalia.org"
-    cta_text: "Send Email"
-    cta_link: "mailto:partnerships@aisafetyitalia.org"
+    description: "For any questions about our organization, activities, or how to get involved."
+    link: "mailto:{{ site.site.email }}"
+    button_text: "aisafetyitalia@gmail.com'"
 
-# Mailing List Section
-mailing_list:
-  title: "Stay Updated"
-  description: "Subscribe to our mailing list to receive updates about events, programs, and news."
-  form_url: "{{ site.forms.mailingList }}"
-  form_target: "_blank"
-  button_text: "Subscribe Now"
+  - id: linkedin
+    title: "LinkedIn"
+    emoji: "💼"
+    description: "Follow us for updates, articles, and professional networking opportunities."
+    link: "{{ site.social.linkedin }}"
+    button_text: "Visit LinkedIn"
 
-# Location Section
-location:
-  title: "Visit Us"
-  address: "Via dei Condotti, 1\n00187 Roma, Italy"
-  description: "While we're primarily an online community, we occasionally host events at this location. Check our events page for upcoming gatherings."
-
-# Social Media Section
-social_media:
-  title: "Follow Us"
-  platforms:
-    - id: 1
-      name: "LinkedIn"
-      emoji: "💼"
-      description: "Follow us for updates, articles, and professional networking."
-      link: "{{ site.social.linkedin }}"
-      username: "@ai-safety-italia"
-    
-    - id: 2
-      name: "Discord"
-      emoji: "💬"
-      description: "Chat with the community, join events, and discuss AI safety in real time."
-      link: "https://discord.gg/aYNAPZjQJu"
-      username: "AI Safety Italia Discord"
-
-# Office Hours Section
-office_hours:
-  title: "Office Hours"
-  description: "We hold virtual office hours every Tuesday and Thursday from 17:00 to 18:00 CET. Drop in to ask questions or chat about AI safety."
-  days: "Tuesday & Thursday"
-  time: "17:00 - 18:00 CET"
-  format: "Virtual (Zoom)"
-  additional_info: "No appointment necessary - just drop in!"
-
-# Contact Form Section
-contact_form:
-  title: "Send Us a Message"
-  description: "Fill out the form below for general inquiries. For specific matters, use the contact methods above."
-  fields:
-    name:
-      label: "Your Name"
-      placeholder: "Enter your name"
-      required: true
-    email:
-      label: "Email Address"
-      placeholder: "Enter your email"
-      required: true
-    subject:
-      label: "Subject"
-      placeholder: "What is this regarding?"
-      required: true
-    message:
-      label: "Message"
-      placeholder: "Enter your message here..."
-      required: true
-  submit_button: "Send Message"
-  success_message: "Thank you for your message! We'll get back to you within 2 business days."
-  error_message: "Sorry, there was an error sending your message. Please try again or contact us directly."
-
-# CTA Section
-cta:
-  title: "Ready to Join Our Community?"
-  description: "Whether you're a researcher, student, professional, or simply curious about AI safety, there's a place for you in our community."
-  button_text: "Join Today"
-  # Link handled directly in template via `site.social.discord`
+  - id: discord
+    title: "Discord"
+    emoji: "💬"
+    description: "Chat with the community, join events, and discuss AI safety in real time."
+    link: "{{ site.social.discord }}"
+    button_text: "Join Discord"
