--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,59 @@
-# Dependencies
+# ============================================
+# Node.js & Package Management
+# ============================================
 node_modules/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
-# Build output
+# ============================================
+# Build & Output
+# ============================================
 _site/
 dist/
 build/
+out/
 
-# Environment variables
+# ============================================
+# Environment Variables & Secrets
+# ============================================
 .env
 .env.local
+.env.*.local
 .env.production
 .env.development
+config/secrets.*
+secrets.json
+*.pem
+.api-keys
 
-# Logs
+# ============================================
+# Logs & Debug
+# ============================================
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
-# OS generated files
+# ============================================
+# IDE & Editor Files
+# ============================================
+.vscode/
+.vscode-server/
+.idea/
+*.sublime-workspace
+*.sublime-project
+*.swp
+*.swo
+*~
+*.bak
+*.swn
+
+# ============================================
+# OS & System Files
+# ============================================
 .DS_Store
 .DS_Store?
 ._*
@@ -26,36 +61,38 @@ yarn-error.log*
 .Trashes
 ehthumbs.db
 Thumbs.db
+desktop.ini
+.AppleDouble
+.LSOverride
 
-# IDE specific files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# Cache directories
-.cache/
-.nyc_output/
+# ============================================
+# Testing & Coverage
+# ============================================
 coverage/
-.nuxt/
-.next/
-.vercel/
+.nyc_output/
+test-results/
+*.lcov
+.coverage
 
-# Temporary files
+# ============================================
+# Cache & Temporary Files
+# ============================================
+.cache/
+.next/
+.nuxt/
+.vercel/
 tmp/
 temp/
-
-# Local Eleventy files (if any)
-.eleventy.js.map
-
-# Editor backup files
-*~
-*.bak
+.tmp
 *.tmp
+*.temp
 
-# Sensitive files
-config/secrets.*
-secrets.json
-private.pem
-public.pem
+# ============================================
+# Misc Development
+# ============================================
+.eleventy.js.map
+.eslintcache
+.stylelintcache
+*.swp
+.env.*.local
+.vercel/
